Desk-Configure docker compose image and mssql data

--- a/Desk/Desk.API/Desk.API.csproj
+++ b/Desk/Desk.API/Desk.API.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Desk.Migrations\Desk.Migrations.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="..\.dockerignore" Link="docker\.dockerignore" />
   </ItemGroup>
 
