--- a/Desk/Desk.API/docker/Dockerfile
+++ b/Desk/Desk.API/docker/Dockerfile
@@ -1,12 +1,10 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /src
 
-#COPY . .
-#RUN dotnet restore
-
-COPY *.sln ./
-COPY Desk.API/Desk.API.csproj Desk.API/
-RUN dotnet restore Desk.API/Desk.API.csproj
+COPY *.sln "./"
+COPY ["Desk.API/Desk.API.csproj", "Desk.API/"]
+COPY ["Desk.Migrations/Desk.Migrations.csproj", "Desk.Migrations/"]
+RUN dotnet restore "Desk.API/Desk.API.csproj"
 
 COPY . .
 WORKDIR "/src/Desk.API"
@@ -16,6 +14,6 @@ FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 COPY --from=build-env /app .
 
-EXPOSE 5000
+EXPOSE 80
 
 ENTRYPOINT ["dotnet", "Desk.API.dll"]
