--- a/Desk/docker-compose.override.yml
+++ b/Desk/docker-compose.override.yml
@@ -1,8 +1,17 @@
 version: '3.4'
 
 services:
-  desk.api:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+  api:
+    build:
+      context: .
+      dockerfile: Desk.API/docker/Dockerfile
     ports:
-      - "80"
+     - "8000:80"
+
+  sqldata:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      - SA_PASSWORD=vV5r9tn0M4@
+      - ACCEPT_EULA=Y
+    ports:
+      - "1450:1433"
