--- a/Desk/docker-compose.yml
+++ b/Desk/docker-compose.yml
@@ -1,8 +1,19 @@
 version: '3.4'
 
 services:
-  desk.api:
-    image:  ${DOCKER_REGISTRY-}multiapp
+  sqldata:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      - SA_PASSWORD=vV5r9tn0M4@
+      - ACCEPT_EULA=Y
+    ports:
+      - "1450:1433"
+
+  api:
     build:
       context: .
       dockerfile: Desk.API/docker/Dockerfile
+    ports:
+     - "8000:80"
+    depends_on:
+      - sqldata
