--- a/Desk/Desk.API/Desk.API.csproj
+++ b/Desk/Desk.API/Desk.API.csproj
@@ -1,25 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Desk.Core\Desk.Core.csproj" />
-    <ProjectReference Include="..\Desk.Migrations\Desk.Migrations.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Desk.Core\Desk.Core.csproj" />
+		<ProjectReference Include="..\Desk.Migrations\Desk.Migrations.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <None Update="..\.dockerignore" Link="docker\.dockerignore" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Update="..\.dockerignore" Link="docker\.dockerignore" />
+	</ItemGroup>
+
+	<PropertyGroup>
+		<SourceAppSettingsConfigFile>appsettings.json.template</SourceAppSettingsConfigFile>
+		<DestinationAppSettingsConfigFile>appsettings.json</DestinationAppSettingsConfigFile>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+		<DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+	</PropertyGroup>
+
+	<Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+		<Copy SourceFiles="$(SourceAppSettingsConfigFile)" DestinationFiles="$(DestinationAppSettingsConfigFile)" Condition="!Exists($(DestinationAppSettingsConfigFile))" />
+	</Target>
 
 </Project>
