--- a/Desk/docker-compose.override.yml
+++ b/Desk/docker-compose.override.yml
@@ -2,18 +2,24 @@ version: '3.4'
 
 services:
   api:
-    build:
-      context: .
-      dockerfile: Desk.API/docker/Dockerfile
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
     ports:
       - "8080:80"
     depends_on:
-      - sqldata
+        - db
+    networks:
+      - gateway
 
-  sqldata:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+  db:
     environment:
-      - SA_PASSWORD=vV5r9tn0M4@
+      - MSSQL_SA_PASSWORD=vV5r9tn0M4@
       - ACCEPT_EULA=Y
+    restart: always
     ports:
-      - "1450:1433"
+        - "1433:1433"
+    networks:
+      - gateway
+
+networks:
+  gateway: {}
