--- a/Desk/docker-compose.yml
+++ b/Desk/docker-compose.yml
@@ -2,18 +2,10 @@ version: '3.4'
 
 services:
   api:
+    image: ${DOCKER_REGISTRY-}deskapi
     build:
       context: .
       dockerfile: Desk.API/docker/Dockerfile
-    ports:
-      - "8080:80"
-    depends_on:
-      - sqldata
 
-  sqldata:
+  db:
     image: mcr.microsoft.com/mssql/server:2022-latest
-    environment:
-      - SA_PASSWORD=vV5r9tn0M4@
-      - ACCEPT_EULA=Y
-    ports:
-      - "1450:1433"
