--- a/Desk/docker-compose.override.yml
+++ b/Desk/docker-compose.override.yml
@@ -1,7 +1,7 @@
 version: '3.4'
 
 services:
-  api:
+  dotnet:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
     ports:
@@ -18,6 +18,14 @@ services:
     restart: always
     ports:
         - "1433:1433"
+    networks:
+      - gateway
+
+  vue:
+    ports:
+      - "8081:8080"
+    depends_on:
+        - dotnet
     networks:
       - gateway
 
