Desk-1-Provide JWT token realization (Server)

--- a/Desk/Desk.API/appsettings.json.template
+++ b/Desk/Desk.API/appsettings.json.template
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Secret": "ockE3mh_EEWXoaH65v5t2g",
+    "ExparedInMinutes": 20,
+    "Issuer": "JWTAuthenticationServer",
+    "Audience": "JWTServicePostmanClient"
+  },
   "AllowedHosts": "*"
 }
